infrastructure/03-traefik/foreign/wgui/adguardservice.yaml
apiVersion: v1
kind: Service
metadata:
  name: wgui
spec:
  type: ExternalName
  externalName: 10.6.0.1
  ports:
    - port: 80
      targetPort: 5182
      protocol: TCP
      name: http
