infrastructure/03-traefik/foreign/wgui/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wgui
  namespace: traefik
spec:
  type: ExternalName
  externalName: 10.6.0.1
  ports:
    - port: 5182
      targetPort: 5182
      protocol: TCP
      name: http
