infrastructure/03-traefik/foreign/wgui/ingress.yaml
apiVersion: traefik.io/v1alpha1
kind: IngressRoute
metadata:
  name: wgui
  namespace: traefik
spec:
  entryPoints:
    - web-local
    - websecure-local
  routes:
  - match: Host(`wgui.steffenillium.de`)
    kind: Rule
    services:
    - name: wgui
      port: http
